<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:shrinkColumns="*"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/txtResultado"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_span="4"
                android:gravity="end" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/btnSiete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str_Siete" />

            <Button
                android:id="@+id/btnOcho"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str_Ocho" />

            <Button
                android:id="@+id/btnNueve"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str_Nueve" />

            <Button
                android:id="@+id/btnMas"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str_Más" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/btnCuatro"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str_Cuatro" />

            <Button
                android:id="@+id/btnCinco"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str_Cinco" />

            <Button
                android:id="@+id/btnSeis"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str_Seis" />

            <Button
                android:id="@+id/btnMenos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str_Menos" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/btnUno"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str_Uno" />

            <Button
                android:id="@+id/btnDos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str_Dos" />

            <Button
                android:id="@+id/btnTres"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str_Tres" />

            <Button
                android:id="@+id/btnMultiplica"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str_Multiplica" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/btnCero"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_span="1"
                android:text="@string/str_cero" />

            <Button
                android:id="@+id/btnClear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str_Clear" />

            <Button
                android:id="@+id/btnIgual"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str_Igual" />

            <Button
                android:id="@+id/btnDivide"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str_Divide" />

        </TableRow>
    </TableLayout>

</androidx.constraintlayout.widget.ConstraintLayout>